--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  <title>Board At School Games</title>
+  </head>
+  <body>
+    <main>
+      <h1>Board At School Games</h1>
+      <p>This website is a free resource for all kids at school who are bored to death by school work or just want a break from school, although it can be used by anyone who wants to play video games. I actually am a kid who likes to play games at school myself. All these games can run on trashy school chromebooks, but can also run on pretty much anything with a keyboard. A lot of kids in my class play video games like these ones. From 1v1 lol to minecraft to slope unblocked, we provide you with resources (video games) so that you <em>NEVER</em> get bored at school or anywhere else! Enjoy!</p>
+      <section>
+        <h2>Parkour / platformer</h2>
+      </section>
+      <section>
+         <a href=”https://sites.google.com/site/classroom6x/ovo”>OvO unblocked</a>
+      </section>
+      <section>
+        <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html">Icey purple head<a>
+      </section>
+      <section>
+        <h2>Clickers</h2>
+          </section>
+          <section>
+        <a href=”https://orteil.dashnet.org/cookieclicker/”>Cookie Clicker</a>
+          </section>
+          <section>
+        <a href=”https://www.coolmathgames.com/0-idle-breakout”>Idle breakout</a>
+      </section>
+      <section>
+        <h2>Shooters</h2>
+          </section><section>
+        <a href=”https://1v1.lol/”>1v1 lol<a>
+      </section>
+      <section>
+        <h2>3D</h2>
+        <a href=”https://sites.google.com/site/slopeunblockedgamez/”>Slope Unblocked<a>
+          </section>
+            <section>
+<a href=”https://sites.google.com/site/slopeunblockedgame/minecraft”>Minecraft unblocked (Free version of minecraft)<a>
+      </section>
+      <section>
+        <img src="https://lh3.googleusercontent.com/XpliUwjXKokUQiDjiFMlPEFPtwsEnvVEOhed75bU0UONtbyJrOhD6oknhXdLrSS5jz6sI_49ci6vaGr9MI0FmWVyfw=w640-h400-e365-rj-sc0x00ffffff">          
+      </section>
+      <section>
+        <h2>Special<h2>
+          </section>
+          <section><a href=”https://www.google.com/search?q=sandboxels&rlz=1CAJOEE_enUS1075&oq=sa&aqs=chrome.0.69i59j69i57j46i131i199i433i465i512j0i131i433i512j46i131i199i433i465i512j69i60l3.1199j0j9&sourceid=chrome&ie=UTF-8&safe=active&ssui=on”>Sandboxles (world builder)<a></section>
+        <section><a href=”https://retrobowl.me/”> Retro Bowl (football)</a>
+              </section>
+            <section>
+              <h2>Other Video Game Sites</h2></section>
+            <section>
+              <p>These sites contain lots of free video games for kids to play. I have no affiliation with any of these sites, but they do the same thing as this one does: they provide free video games to board people (mainly kids at school.)</p></section>
+            <section>
+              <a href="https://unblocked-gamez.io/">Unblocked Gamez<a></section>
+      <section>
+        <a href="https://www.coolmathgames.com/"> Cool Math Games<a>
+          </section>
+        <h2>Info</h2>
+        <section>
+        <h3>Top 3 most popular games<h3>
+          </section>
+          <section>
+        <ol>
+         <li>Minecraft unblocked</li>
+         <li>Idle breakout</li>
+         <li>OvO unblocked</li>
+        </ol>
+          </section>
+          <section>
+          <p>Minecraft Unblocked is the most popular video game by far. Pretty much everyone plays it while they play video games at school. It also has a lot of glitches because it is one of the oldest editions of JavaScript minecraft. Hint: you can run Minecraft a lot faster if you download a map.</p></section>
+          <section>
+            <h2>Credits</h2>
+            <h3>Main Designers And Programmers</h3>
+            <ul>
+              <li>Spencer</li>
+              <li>Lucas<li>
+            </ul>
+            <h3>Other Helpers</h3>
+            <ul>
+              <li>Elijah (Taught me HTML and gave me this as a school assignment even though I turned it into a home project)</li>
+            </ul>
+     </main>
+  </body>
+</html>
 
