--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<style>
+  body {
+  font-family: sans-serif;
+  background: #b8e4ff;
+  color: black;
+  text-align: center;
+}
+</style>
 <html>
   <head>
   <title>Board At School Games</title>
