--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2>Parkour / platformer</h2>
       </section>
       <section>
-         <a href=”www.https://sites.google.com/site/classroom6x/ovo”>OvO unblocked</a>
+         <!--<a href=”https://sites.google.com/site/classroom6x/ovo”>OvO unblocked</a>-->
+        <p>[OvO](https://sites.google.com/site/classroom6x/ovo)</p>
       </section>
       <section>
         <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html">Icey purple head<a>
