--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </section>
       <section>
          <!--<a href=”https://sites.google.com/site/classroom6x/ovo”>OvO unblocked</a>-->
-        <p>[OvO](https://sites.google.com/site/classroom6x/ovo)</p>
+        [OvO](https://sites.google.com/site/classroom6x/ovo)
       </section>
       <section>
         <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html">Icey purple head<a>
