--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h2>Parkour / platformer</h2>
       </section>
       <section>
-         <a href=”https://sites.google.com/site/classroom6x/ovo”>OvO unblocked</a>
+         <a href=”https://sites.google.com/site/classroom6x/ovo/”>OvO unblocked</a>
       </section>
       <section>
-        <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html">Icey purple head<a>
+        <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html/">Icey purple head<a>
       </section>
       <section>
         <h2>Clickers</h2>
@@ -31,7 +31,7 @@
         <a href=”https://orteil.dashnet.org/cookieclicker/”>Cookie Clicker</a>
           </section>
           <section>
-        <a href=”https://www.coolmathgames.com/0-idle-breakout”>Idle breakout</a>
+        <a href=”https://www.coolmathgames.com/0-idle-breakout/”>Idle breakout</a>
       </section>
       <section>
         <h2>Shooters</h2>
