--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
          <a href="https://sites.google.com/site/classroom6x/ovo">OvO Unblocked</a>
       </section>
       <section>
-        <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html/">Icey purple head<a>
+        <a href="https://www.mathplayground.com/logic_icy_purple_head_3.html">Icey Purple Head</a>
       </section>
       <section>
         <h2>Clickers</h2>
           </section>
           <section>
-        <a href=”https://orteil.dashnet.org/cookieclicker/”>Cookie Clicker</a>
+            <a href="https://sites.google.com/site/classroom6x/cookie-clicker">Cookie Clicker</a>
           </section>
           <section>
-        <a href=”https://www.coolmathgames.com/0-idle-breakout/”>Idle breakout</a>
+        <a href="https://idle-breakout.github.io/">Idle Breakout</a>
       </section>
       <section>
         <h2>Shooters</h2>
           </section><section>
-        <a href=”https://1v1.lol/”>1v1 lol<a>
+        <a href="https://sites.google.com/site/classroom6x/1v1-lol">1v1 LOL</a>
       </section>
       <section>
         <h2>3D</h2>
-        <a href=”https://sites.google.com/site/slopeunblockedgamez/”>Slope Unblocked<a>
+        <a href="https://sites.google.com/site/slopeunblockedgamez/">Slope Unblocked</a>
           </section>
             <section>
-<a href=”https://sites.google.com/site/slopeunblockedgame/minecraft”>Minecraft unblocked (Free version of minecraft)<a>
+        <a href="https://sites.google.com/site/slopeunblockedgame/minecraft">Minecraft Unblocked (Free Version Of Minecraft)</a>
       </section>
       <section>
         <img src="https://lh3.googleusercontent.com/XpliUwjXKokUQiDjiFMlPEFPtwsEnvVEOhed75bU0UONtbyJrOhD6oknhXdLrSS5jz6sI_49ci6vaGr9MI0FmWVyfw=w640-h400-e365-rj-sc0x00ffffff">          
@@ -51,17 +51,19 @@
       <section>
         <h2>Special<h2>
           </section>
-          <section><a href=”https://www.google.com/search?q=sandboxels&rlz=1CAJOEE_enUS1075&oq=sa&aqs=chrome.0.69i59j69i57j46i131i199i433i465i512j0i131i433i512j46i131i199i433i465i512j69i60l3.1199j0j9&sourceid=chrome&ie=UTF-8&safe=active&ssui=on”>Sandboxles (world builder)<a></section>
-        <section><a href=”https://retrobowl.me/”> Retro Bowl (football)</a>
+          <section>
+            <a href="https://sandboxels.r74n.com/">Sandboxels (World Builder)</a>
+        <section>
+          <a href="https://jakwhegf.github.io/iuertjklngkkdd/">Retro Bowl (Football)</a>
               </section>
             <section>
               <h2>Other Video Game Sites</h2></section>
             <section>
               <p>These sites contain lots of free video games for kids to play. I have no affiliation with any of these sites, but they do the same thing as this one does: they provide free video games to board people (mainly kids at school.)</p></section>
             <section>
-              <a href="https://unblocked-gamez.io/">Unblocked Gamez<a></section>
+              <a href="https://sites.google.com/view/games-unblockedd/">Unblocked Games</a>
       <section>
-        <a href="https://www.coolmathgames.com/"> Cool Math Games<a>
+        <a href="https://sites.google.com/site/coolmathgames247/home">Cool Math Games</a>
           </section>
         <h2>Info</h2>
         <section>
