--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h2>Shooters</h2>
           </section><section>
         <a href="https://sites.google.com/site/classroom6x/1v1-lol">1v1 LOL</a>
+        <a href="https://sites.google.com/site/classroom6x/pixel-shooter">Pixel Shooter</a>
       </section>
       <section>
         <h2>3D</h2>
