--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>
 <html>
   <head>
-  <title>Board At School Games</title>
+  <title>Bored At School Games</title>
   </head>
   <body>
     <main>
@@ -63,7 +63,7 @@
             <section>
               <h2>Other Video Game Sites</h2></section>
             <section>
-              <p>These sites contain lots of free video games for kids to play. I have no affiliation with any of these sites, but they do the same thing as this one does: they provide free video games to board people (mainly kids at school.)</p></section>
+              <p>These sites contain lots of free video games for kids to play. I have no affiliation with any of these sites, but they do the same thing as this one does: they provide free video games to bored people (mainly kids at school.)</p></section>
             <section>
               <a href="https://sites.google.com/view/games-unblockedd/">Unblocked Games</a>
       <section>
