--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <main>
-      <h1>Board At School Games</h1>
+      <h1>Bored At School Games</h1>
       <p>This website is a free resource for all kids at school who are bored to death by school work or just want a break from school, although it can be used by anyone who wants to play video games. I actually am a kid who likes to play games at school myself. All these games can run on trashy school chromebooks, but can also run on pretty much anything with a keyboard. I tested all these sites and they aren't blocked. A lot of kids in my class play video games like these ones. From 1v1 lol to minecraft to slope unblocked, we provide you with resources (video games) so that you <em>NEVER</em> get bored at school or anywhere else! Enjoy!</p>
       <section>
         <h2>Parkour / platformer</h2>
