--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Clickers</h2>
           </section>
           <section>
-            <a href="https://sites.google.com/site/classroom6x/cookie-clicker">Cookie Clicker</a>
+            <a href="https://ozh.github.io/cookieclicker/">Cookie Clicker</a>
           </section>
           <section>
         <a href="https://idle-breakout.github.io/">Idle Breakout</a>
