--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <section>
             <a href="https://sandboxels.r74n.com/">Sandboxels (World Builder)</a>
         <section>
-          <a href="https://jakwhegf.github.io/iuertjklngkkdd/">Retro Bowl (Football)</a>
+          <a href="https://retrobowl-unblocked.github.io/#">Retro Bowl (Football)</a>
               </section>
             <section>
               <h2>Other Video Game Sites</h2></section>
