--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       <section>
         <h2>3D</h2>
-        <a href="https://sites.google.com/site/slopeunblockedgamez/">Slope Unblocked</a>
+        <a href="https://sites.google.com/view/slopecom/">Slope Unblocked</a>
           </section>
             <section>
         <a href="https://sites.google.com/site/slopeunblockedgame/minecraft">Minecraft Unblocked (Free Version Of Minecraft)</a>
