--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
               <li>Elijah (Taught me HTML and gave me this as a school assignment even though I turned it into a home project)</li>
               <li>You!</li>
             </ul>
+            <section>
+              <h2>Better Than Ethan's Website</h2>
+            </section>
+            <section>
+              <h2>Also Better Than Grady's Site</h2>
+            </section>
+            <Section>
+              <h3>Why?</h3>
+              <ul>
+                <li>Because It Contains Video Games So Kids Don't Get Board At School</li>
+                <li>Because It's Professional Quality</li>
+                <li>Because It Has A Purpose</li>
+                <li>Because They Didn't Make It</li>
+                <li>Because I Made It</li>
+              </ul>
+            </Section>
      </main>
   </body>
 </html>
