--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <style>
   body {
-  font-family: sans-serif;
+  font-family: fantasy;
   background: #b8e4ff;
   color: black;
   text-align: center;
