--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
         <ol>
          <li>Minecraft unblocked</li>
          <li>OvO unblocked</li>
-         <li>Idle breakout</li>
+         <li>Cookie Clicker</li>
         </ol>
+            <p>NOTE: the most popular games change all the time. By the time you are viewing this, the list above is probably completly inaccurate</p>
           </section>
           <section>
           <p>Minecraft Unblocked is the most popular video game by far. Pretty much everyone plays it while they play video games at school. It also has a lot of glitches because it is one of the oldest editions of JavaScript minecraft. Hint: you can run Minecraft a lot faster if you download a map.</p></section>
