--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <ul>
               <li>Spencer</li>
               <li>Lucas<li>
+              <li>One Other Who Dosen't Want Their Name Mentioned</li>
             </ul>
             <h3>Other Helpers</h3>
             <ul>
