--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>Credits</h2>
             <h3>Main Designers And Programmers</h3>
             <ul>
-              <li>Spencer</li>
+              <li>DevWizard</li>
               <li>Lucas<li>
               <li>One Other Who Dosen't Want Their Name Mentioned</li>
             </ul>
