--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <li>Because It's Professional Quality</li>
                 <li>Because It Has A Purpose</li>
                 <li>Because They Didn't Make It</li>
-                <li>Because I Made It</li>
+                <li><strong>Because I Made It</strong></li>
               </ul>
             </Section>
      </main>
