--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <ul>
                 <li>Because It Contains Video Games So Kids Don't Get Board At School</li>
                 <li>Because It's Professional Quality</li>
-                <li>Because It Has A Purpose</li>
+                <li>Because It Has A <em>Real</em> Purpose</li>
                 <li>Because They Didn't Make It</li>
                 <li><strong>Because I Made It</strong></li>
               </ul>
