--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Special<h2>
           </section>
           <section>
-            <a href="https://sandboxels.r74n.com/">Sandboxels (World Builder)</a>
+            <a href="https://sandboxels.r74n.com/">Sandboxels (intricate sand and water simulator)</a>
         <section>
           <a href="https://retrobowl-unblocked.github.io/#">Retro Bowl (Football)</a>
               </section>
