--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Special<h2>
           </section>
           <section>
-            <a href="https://sandboxels.r74n.com/">Sandboxels (intricate sand and water simulator)</a>
+            <a href="https://sandboxels.r74n.com/">Sandboxels (Intricate Sand And Water Simulator)</a>
         <section>
           <a href="https://retrobowl-unblocked.github.io/#">Retro Bowl (Football)</a>
               </section>
@@ -76,8 +76,8 @@
           </section>
           <section>
         <ol>
-         <li>Minecraft unblocked</li>
-         <li>OvO unblocked</li>
+         <li>Minecraft Unblocked</li>
+         <li>OvO Unblocked</li>
          <li>Cookie Clicker</li>
         </ol>
             <p>NOTE: the most popular games change all the time. By the time you are viewing this, the list above is probably completly inaccurate</p>
@@ -95,7 +95,7 @@
             <h3>Other Helpers</h3>
             <ul>
               <li>Elijah (Taught me HTML and gave me this as a school assignment even though I turned it into a home project)</li>
-              <li>You!</li>
+              <li>You! (For Playing The Game)</li>
             </ul>
             <section>
               <h2>Better Than Ethan's Website</h2>
